# PalGen

./: CMakeLists.txt  README.md
Algorithms/K-Means/: kmeans.c
Algorithms/hashes/: hashes.c
ColorUtils/: printColor.c
cmd/: main.c
include/: common.h  defaults.h  hashes.h  kmeans.h  printColor.h
tests/: test_kmeans.c  test_printColor.c
